# nng-2017

./: README.md
finals/: .gitignore  CMakeLists.txt
finals/client/: Client.cpp  Client.h  Hypno.cpp  Hypno.h  Matrix.h  MyClient.cpp  Position.h  distcache.cpp  distcache.h  parser.cpp  parser.h
qualif/: vagga.yaml
qualif/city/: CMakeLists.txt  rank.sh  tune.sh
qualif/city/maps/: evil.in  leet.in  map1.in  map2.in  map3.in  map4.in  map5.in  map6.in  map7.in  map8.in  map9.in  mill.in
qualif/city/src/: main.cpp  main2.cpp  matrix.hpp
qualif/lego-wall/: .gitignore  CMakeLists.txt  fours.input  gen.py  main.cpp  pwords  ref1-100.out  s6.input  sample.input  sed.sh  stress.input  stress50.input  test.input  uglify.py  ws
qualif/point-hunting/: 10x10.txt  CMakeLists.txt  Cube.cpp  Cube.h  Field.cpp  Field.h  main.cpp  sample.input
qualif/sports-betting/: .gitignore  CMakeLists.txt  concat.py  example.in  example.out  gen.py  sed.sh  uglify.py
qualif/sports-betting/src/: Hungarian.cpp  Hungarian.h  Hungarian2.hpp  Number.cpp  Number.hpp  hungarian.cpp  hungarian.hpp  hungarian2_solve.cpp  hungarian3_solve.cpp  hungarian_solve.cpp  main.cpp  solve.cpp  solve.hpp
qualif/sports-betting/submissions/: concat2.cpp
qualif/squares/: CMakeLists.txt  TODO  evil.in  example.in  fast.in  gen.py  poc.py  runtest.sh  slow.in  squares.cpp  squares0.cpp  survey.txt
qualif/squares/tests/: test-03.in  test-03.out  test-06.in  test-06.out  test-09.in  test-09.out  test-12.in  test-12.out  test-15.in  test-15.out  test-18.in  test-18.out  test-21.in  test-21.out  test-24.in  test-24.out  test-27.in  test-27.out
